[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kobraille"
version = "0.1.0"
description = "LaTeX 수학 수식을 한국 점자로 변환하는 라이브러리"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/qualia-bridge/kobraille"